--- a/nsplode/index.html
+++ b/nsplode/index.html
@@ -18,7 +18,8 @@
 			
 		</style>
 		
-		<script src="index.js"></script>
+		<script src="../nsbase/build/nsbase.js"></script>
+		<script src="build/nsplode.js"></script>
 
 	</head>
 
